--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,7 +1,8 @@
 
 <div class="banner" >
   <div class="container">
-    <h1>Drippy Cocktails</h1>
+  <img src="img/purple_image.png" alt="logo"/>
+    <h1 id="yo">Drippy Cocktails</h1>
   </div>
 </div>
 
@@ -21,3 +22,4 @@
 
 
 <%= link_to "Create new", new_cocktail_path %>
+
