--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -3,13 +3,11 @@
 h1 {
     text-align: center;
     padding-top: 142px;
-    font-family: 'Shadows Into Light', cursive;
+    font-family: 'Indie Flower', cursive;
     color: #6930c3;
 }
 
-#loco {
 
-}
 
 .card-trip {
     overflow: hidden;
@@ -49,7 +47,8 @@ h1 {
       width: 316px;
       display: inline-block;
       margin-left: 100px;
-      margin-bottom: 50px;
+      margin-bottom: -164px;
+      margin-top: 240px;
   }
   
   .card-trip-infos .card-trip-user {
