--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,10 +1,51 @@
 
+  <a> <%= cl_image_tag("Pngtree_glossy_purple_dripping_lips_4352969_1_o3pn3x",
+      width: 50, height: 50, crop: :fill) %></a>
+  <nav class="navbar navbar-light bg-light">
+  <form class="form-inline">
+          <button type='button' class="btn btn-primary" onclick="location.href='<%= new_cocktail_path %>';">Create +</button>
+  </form>
+</nav>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+      <button type='button' class="btn btn-primary" onclick="location.href='<%= new_cocktail_path %>';">Create +</button>
+      </li> 
+      <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      </li>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Dropdown
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="#">Action</a>
+          <a class="dropdown-item" href="#">Another action</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#">Something else here</a>
+        </div>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+      </li>
+    </ul>
+    <form class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+    </form>
+  </div>
+</nav>
+
+
+
+
 <div class="banner" >
   <div class="container">
-  <img src="img/purple_image.png" alt="logo"/>
-    <h1 id="yo">Drippy Cocktails</h1>
-  </div>
+    <h1>Drippy Cocktails</h1>
 </div>
+
+
 
 <% @cocktails.each do |cocktail|%>
 <div class="card-trip">
@@ -21,5 +62,5 @@
 <%end%>
 
 
-<%= link_to "Create new", new_cocktail_path %>
+
 
