--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,10 +1,16 @@
-<h1>Create your own Cocktail!</h1>
+<div class="banner" >
+  <div class="container">
+    <h1>Create a new "Drippy Cocktails"</h1>
+</div>
+</div>
 
+<body>
 <%= form_for(@cocktail) do |f| %>
   <%= f.label :name %>
   <%= f.text_field :name %>
   <%= f.submit %>
-  
+
 <% end %>
 
-<%= link_to "Go back mate", cocktails_path %>
+<button type='button' class="btn btn-primary" onclick="location.href='<%= cocktails_path %>';">Go back</button>
+</body>
